# flightradar

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  pyproject.toml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  scheduling.py
backend/app/api/: __init__.py  dependencies.py  mappers.py  models.py
backend/app/api/endpoints/: admin.py  aircraft.py  airlines.py  flights.py
backend/app/auth/: __init__.py  anonymous.py  config.py  database.py  manager.py  models.py
backend/app/core/models/: aircraft.py  position_report.py
backend/app/core/services/: airline_service.py  flight_manager.py  flight_updater_coordinator.py  incomplete_aircraft_manager.py  position_manager.py
backend/app/core/utils/: callsign_util.py  modes_util.py
backend/app/crawling/: crawler.py
backend/app/crawling/utils/: source_backoff.py
backend/app/data/: __init__.py  database.py  models.py  schema.py
backend/app/data/repositories/: aircraft_processing_repository.py  aircraft_repository.py  crawler_log_repository.py  mongodb_repository.py
backend/app/data/sources/: radar_service_factory.py
backend/app/middleware/: __init__.py  rate_limit.py
backend/app/sse/: manager.py  notifier.py
backend/contrib/: nginx.conf
backend/contrib/tools/: aircraft_icao_updater.py  icaoDoc8643importer.py
backend/resources/: meta.json  mil_ranges.json  operators.json
backend/resources/proto/: adsb.proto
backend/scripts/: backfill_airline_icao.py
backend/tests/: config_test.py  flightupdater_test.py
(+76 files in other folders)
